resource-server-oracle/.kubernates/components/istio/istio.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${artifactId}
spec:
  hosts:
    - "*"
  gateways:
    - ${artifactId}.default.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: /auth-server
      route:
        - destination:
            port:
              number: 8080
            host: ${artifactId}.svc.cluster.local
